--- a/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/customer/account/view.phtml
+++ b/app/code/OleksiiBezpoiasnyi/RegularCustomer/view/frontend/templates/customer/account/view.phtml
@@ -1,18 +1,17 @@
-<?php /** @var \OleksiiBezpoiasnyi\RegularCustomer\Block\PersonalDiscountInfo $block */ ?>
-<?php /** @var \Magento\Framework\Escaper $escaper */ ?>
-<?php if ($personalDiscount = $block->getPersonalDiscount()): ?>
+<?php /** @var \OleksiiBezpoiasnyi\RegularCustomer\Block\PersonalDiscountInfo $block */
+/** @var \Magento\Framework\Escaper $escaper */
+if ($personalDiscounts = $block->getPersonalDiscount()):
+/** @var \OleksiiBezpoiasnyi\RegularCustomer\Api\Data\DiscountRequestInterface $personalDiscount */
+    foreach ($personalDiscounts as $personalDiscount) :?>
     <p>
-        <span><?= $escaper->escapeHtml(__('Your amount of discount:')) ?></span>
-    <?php if ($personalDiscount->getDiscountSize()): ?>
-        <span><?= $escaper->escapeHtml($personalDiscount->getDiscountSize() . '%') ?></span>
-    <?php else: ?>
-        <span><?= $escaper->escapeHtml(__('The amount of the discount has not yet been set by the administrator')) ?></span>
-    <?php endif; ?>
+        <span><?= $escaper->escapeHtml(__('Product: ')) ?></span>
+        <span><?= $escaper->escapeHtml($personalDiscount->getProductId()) ?></span>
     </p>
     <p>
         <span><?= $escaper->escapeHtml(__('Request status:')) ?></span>
         <span><?= $escaper->escapeHtml($block->getStatusMessage($personalDiscount)) ?></span>
     </p>
+    <?php endforeach; ?>
 <?php else: ?>
     <p><?= $escaper->escapeHtml(__('No request to register in loyalty program')) ?></p>
 <?php endif; ?>
